tests/miniJava/pos/000791_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new int [ 0 ] ) if ( 0 ) { } else { } else if ( 0 ) { } else { } } }
