tests/miniJava/neg/004380_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public public int [] java ( ) { return 0 ; } int [] java ( ) { return 0 ; } }
